--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tauri-apps/plugin-os": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2.3.0",
     "@tauri-apps/plugin-store": "^2.3.0",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "@tauri-apps/plugin-websocket": "^2.4.0",
     "element-plus": "^2.10.2",
     "pinia": "^3.0.3",
