--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.2.3",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run sync-version && vite",
     "build": "npm run sync-version && vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
