--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kiwi-app"
-version = "1.2.3"
+version = "1.0.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2024"
@@ -60,12 +60,12 @@ capture = { git = "https://github.com/qzd1989/capture.git" }
 enigo = { git = "https://github.com/qzd1989/enigo.git", features = ["serde"] }
 rdev = { git = "https://github.com/qzd1989/rdev.git" }                         #recording mouse and keyboard
 chrono = { version = "0.4.41", features = ["serde"] }                          #format time for logs
+rust-i18n = "3"
 # custom end
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2"
-tauri-plugin-updater = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc2 = "0.6.1"            #截屏时使kiwi窗口透明
