--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pinia-plugin-persistedstate": "^4.4.0",
     "tauri-plugin-macos-permissions-api": "^2.3.0",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.7",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
