--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
+    "vue-i18n-extract": "^2.0.7",
     "vue-tsc": "^2.1.10"
   }
 }
