--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -2,7 +2,7 @@ name: windows-build-on-push
 
 on:
   push:
-  # release:
+  #release:
 
 jobs:
   build:
@@ -122,13 +122,13 @@ jobs:
       #     path: src-tauri/target/release
       #     key: ${{ runner.os }}-target-${{ hashFiles('**/Cargo.lock') }}
 
-      # - name: Cache node_modules
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: node_modules
-      #     key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-node-
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         run: npm ci
